<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movies.ui.MoviesFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        android:background="@android:color/black"
        app:lottie_fileName="progressMovie.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/scrollViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_popular"
                style="@style/textStyle"
                android:hint="@string/popularMovies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                style="@style/recyclerViewStyle" />

            <TextView
                android:id="@+id/tv_topRated"
                style="@style/textStyle"
                android:hint="@string/topRatedMovies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_topRated"
                style="@style/recyclerViewStyle" />

            <TextView
                android:id="@+id/tv_upComing"
                style="@style/textStyle"
                android:hint="@string/upComingMovies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upComing"
                style="@style/recyclerViewStyle" />

            <TextView
                android:id="@+id/tv_nowPlaying"
                style="@style/textStyle"
                android:hint="@string/nowPlayingMovies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_nowPlaying"
                style="@style/recyclerViewStyle" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>