<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.SeriesDetailFragment"
    android:background="#181B47">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/detailStyle"
                android:hint="@string/title"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_releaseDate"
                style="@style/detailStyle"
                android:hint="@string/releaseDate"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_voteAverage"
                style="@style/voteAverageStyle"
                android:textSize="26sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_overview"
                style="@style/detailStyle"
                android:hint="@string/overview"
                android:inputType="textMultiLine"
                android:textSize="20sp"
                android:textStyle="italic" />
            <Button
                android:id="@+id/btn_addToFavorites"
                style="@style/bottomDetailStyle"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>