<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#081A6D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#181B47"
            android:visibility="visible" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_title"
                android:hint="@string/title"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_releaseDate"
                android:hint="@string/releaseDate"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:id="@+id/tv_voteAverage"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:hint="@string/voteAverage"
                android:textColorHint="@color/white"
                android:textColor="#ffff00"
                android:textSize="24sp"
                android:textStyle="normal" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Calification.Style"
                android:stepSize="0.1" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>