<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="10dp">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/ll_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/popularMovies"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/latestMovies"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_latest"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_topRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/topRatedMovies"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_topRated"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_upComing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/upComingMovies"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upComing"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nowPlayingMovies"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_nowPlaying"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/bottom_background"
            android:src="@drawable/ic_movie_foreground" />

        <ImageButton
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/bottom_background"
            android:src="@drawable/ic_series" />

        <ImageButton
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/bottom_background"
            android:src="@drawable/ic_favorites_foreground" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>