<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SeriesFragment">


    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/ll_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/popularSeries"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popularTv"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/latestSeries"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_latestTv"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_topRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/topRatedSeries"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_topRatedTv"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_airingToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/airingToday"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_airingTodayTv"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
            <TextView
                android:id="@+id/tv_onTheAir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/onTheAir"
                android:background="@color/black"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_onTheAirTv"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#181B47"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_movies"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/bottom_background"
            android:src="@drawable/ic_movie_foreground" />

        <ImageButton
            android:id="@+id/btn_series"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/bottom_background"
            android:src="@drawable/ic_series" />

        <ImageButton
            android:id="@+id/btn_favorites"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/bottom_background"
            android:src="@drawable/ic_favorites_outline_foreground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>